Monitoring/example-3/app/deploy/2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-server
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gin-server
  template:
    metadata:
      labels:
        app: gin-server
    spec:
      containers:
      - name: gin-server
        imagePullPolicy: Always
        image: svestor/app-server:v1.0.1-2025-06-23
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 40m
            memory: 64Mi
