Monitoring/example-3/app/deploy/3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gin-server
  namespace: staging
  labels:
    app: gin-server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: http
  selector:
    app: gin-server
